@startuml

' ===========================
' Classes and Inheritance
' ===========================

abstract class User {
    ID: UUID {primary key}
    email: text
    password_hash: text
}

User <|-- Client
User <|-- Lawyer
User <|-- Admin

class Client {
    address: text
}

class Lawyer {
    description: text
    photo: text
}

class Admin {
    ' No specific attributes visible in the diagram
}

' ===========================
' Core Business Classes
' ===========================

class Process {
    ID: UUID {primary key}
    client_ID: UUID {foreign key -> Client.ID}
    lawyer_ID: UUID {foreign key -> Lawyer.ID}
    description: text
    created_at: date
    closed_at: date
    steps_count: int
    current_step: int
}

class Documents {
    ID: UUID {primary key}
    process_ID: UUID {foreign key -> Process.ID}
    file_path: text
    is_read: boolean
}

class Notification {
    ID: UUID {primary key}
    process_ID: UUID {foreign key -> Process.ID}
    client_ID: UUID {foreign key -> Client.ID}
    content: text
}

class Chat {
    ID: UUID {primary key}
    client_ID: UUID {foreign key -> Client.ID}
    lawyer_ID: UUID {foreign key -> Lawyer.ID}
}

class Message {
    ID: UUID {primary key}
    chat_ID: UUID {foreign key -> Chat.ID}
    sender_ID: UUID {foreign key -> User.ID}
    receiver_ID: UUID {foreign key -> User.ID}
    content: text
    sent_at: date
}

class Appointment {
    ID: UUID {primary key}
    client_ID: UUID {foreign key -> Client.ID}
    lawyer_ID: UUID {foreign key -> Lawyer.ID}
    process_ID: UUID {foreign key -> Process.ID}
    scheduled_at: datetime
}

' ===========================
' Relationships and Associations
' ===========================

' Notifications
User "1" -- "0..*" Notification : receives
Process "1" -- "0..*" Notification : sends

' Process and Documents
Process "1" -- "0..*" Documents : contains

' Core Workflow
Client "1" -- "0..*" Process : manages
Lawyer "1" -- "0..*" Process : handles

' Chat and Messages (Composition)
Chat "1" *-- "0..*" Message : contains

' Client, Lawyer, and Chat
Client "1" -- "0..*" Chat : owns
Lawyer "1" -- "0..*" Chat : owns

' Appointments
Client "1" -- "0..*" Appointment : has
Lawyer "1" -- "0..*" Appointment : has

@enduml